<resources>
    <string name="app_slogan">专注，成就品质</string>
    <string name="text_empty">还没有数据呢！</string>
    <string name="text_retry">获取数据失败，点击重试！</string>
    <string name="login">登　　录</string>
    <string name="username">用户名</string>
    <string name="username_hint">用户名</string>
    <string name="password">密码</string>
    <string name="password_hint">密码</string>
    <string name="version_p">版本：%s</string>
    <string name="loading">加载中...</string>
    <string name="running">运行</string>
    <string name="error">异常</string>
    <string name="offline">离线</string>
    <string name="all">全部</string>
    <string name="type_f">型号：%s</string>
    <string name="device_no_f">设备号：%s</string>
    <string name="device_rate_axis">主轴倍率:---</string>
    <string name="device_rate_fast">快速倍率:---</string>
    <string name="device_rate_feed">进给倍率:---</string>
    <string name="device_rate_axis_f">主轴倍率:% 5d</string>
    <string name="device_rate_fast_f">快速倍率:% 5d</string>
    <string name="device_rate_feed_f">进给倍率:% 5d</string>
    <string name="machine_no">设备编号</string>
    <string name="stuff_name">员工姓名</string>
    <string name="production">产品</string>
    <string name="number">数量</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="order_no_f">订单号：%s</string>
    <string name="order_name_f">订单名称：%s</string>
    <string name="client_name_f">客户名称：%s</string>
    <string name="stuff_no_f">员工编号：%s</string>
    <string name="phone_f">电话：%s</string>
    <string name="plan_time_f">%s - %s</string>
    <string name="device_status_desc_f">设备当前处在%s状态,已持续%s</string>

    <string name="home">主页</string>
    <string name="machine_info">加工监控</string>
    <string name="stuff_info">员工信息</string>
    <string name="order_manager">订单监控</string>
    <string name="me">我</string>
    <string name="about">关于</string>
    <string name="factory_info">企业信息</string>
    <string name="service_info">服务信息</string>
    <string name="system_setting">设置</string>
    <string name="version_info">版本信息</string>
    <string name="tip_time_pick">温馨提示：滑动两端选取时间范围</string>
    <string name="other_company">豫鹏机械厂智能工厂手机端</string>
    <string name="develop_company">杭州领克信息科技有限公司</string>
    <string name="developer_site">www.lingkexinxi.com</string>
    <string name="developer_address">联系地址：杭州市经济技术开发区白杨街道6号大街452号2-D1810</string>
    <string name="developer_call">服务电话：0571-56071258</string>
    <string name="developer_nick_name">技术专员：江工程师</string>
    <string name="developer_phone">专员电话：13858033500</string>
    <string name="developer_site_f">公司网址：www.lingkexinxi.com</string>
    <string name="call_service">呼叫0571-56071258</string>
    <string name="call_num">0571-56071258</string>
    <string name="check_update">检查更新</string>
    <string name="logout">注销登录</string>
    <string name="update_frequency">更新频率</string>
    <string name="machine_process_number">加工数量</string>
    <string name="machine_process_clock">加工节拍</string>
    <string name="machine_clock_data_f">最长周期：%s最短周期：%s平均周期：%s</string>
    <string name="last_refresh_f">上次刷新：%s</string>

    <string name="max_f">最长:%s</string>
    <string name="min_f">最短:%s</string>
    <string name="avg_f">平均:%s</string>


    <string name="fac_name_f">公司名称：%s</string>
    <string name="build_time_f">成立日期：%s</string>
    <string name="found_f">注册资金：%s</string>
    <string name="emp_f">员工数量：%s</string>
    <string name="leader_f">企业法人：%s</string>
    <string name="process_date_f">日期：%s</string>
    <string name="process_num_f">加工数量：%d</string>

    
    
    <string-array name="order_title">
        <item>挂起</item>
        <item>全部</item>
        <item>进行中</item>
        <item>已完成</item>
    </string-array>
</resources>
