<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="40dp">
        <TextView
            android:textColor="@android:color/black"
            android:gravity="center"
            android:id="@+id/tv_machine_id"
            android:layout_weight="1"
            android:text="@string/machine_no"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/stuff_name"
            android:id="@+id/tv_stuff_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/production"
            android:id="@+id/tv_product"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/number"
            android:id="@+id/tv_num"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <View
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

</LinearLayout>
