<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardElevation="0dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/tv_current"
            android:gravity="center"
            android:text="当前班次"
            android:textStyle="bold"
            android:textSize="@dimen/subhead_text_size"
            android:layout_width="wrap_content"
            android:paddingRight="15dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_week"
            android:gravity="center"
            android:textSize="@dimen/subhead_text_size"
            android:text="一周内"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_month"
            android:gravity="center"
            android:text="本月"
            android:textSize="@dimen/subhead_text_size"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <View
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <LinearLayout
        android:layout_marginTop="31dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="40dp">
        <TextView
            android:textColor="@color/black70"
            android:gravity="center"
            android:id="@+id/tv_machine_id"
            android:layout_weight="1"
            android:text="@string/machine_no"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:textColor="@color/black70"
            android:gravity="center"
            android:text="@string/stuff_name"
            android:id="@+id/tv_stuff_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:textColor="@color/black70"
            android:gravity="center"
            android:text="@string/production"
            android:id="@+id/tv_product"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:textColor="@color/black70"
            android:gravity="center"
            android:text="@string/number"
            android:id="@+id/tv_num"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <View
        android:layout_marginTop="71dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="72dp"
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

</android.support.v7.widget.CardView>